--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/aunalogo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="0VO-IaX0jVUSurOksYE17E1xK5Go2v-mRWa9LKsG1ak" />
     <meta
       name="description"
       content="Web site created using create-react-app"
