--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ⚡ lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/aunalogo.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="0VO-IaX0jVUSurOksYE17E1xK5Go2v-mRWa9LKsG1ak" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/aunalogo.jpg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="Auna: Handcrafted bags and sustainable designs" />
+    
+    <!-- AMP boilerplate -->
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <style amp-boilerplate>
+      body {
+        -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
+        -moz-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
+        -ms-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
+        animation: -amp-start 8s steps(1,end) 0s 1 normal both;
+      }
+
+      @-webkit-keyframes -amp-start {
+        from { visibility: hidden } to { visibility: visible }
+      }
+
+      @-moz-keyframes -amp-start {
+        from { visibility: hidden } to { visibility: visible }
+      }
+
+      @-ms-keyframes -amp-start {
+        from { visibility: hidden } to { visibility: visible }
+      }
+
+      @keyframes -amp-start {
+        from { visibility: hidden } to { visibility: visible }
+      }
+    </style>
+    <noscript>
+      <style amp-boilerplate>
+        body {
+          -webkit-animation: none;
+          -moz-animation: none;
+          -ms-animation: none;
+          animation: none;
+        }
+      </style>
+    </noscript>
+
+    <!-- AMP won't allow React to work, this is symbolic -->
     <title>Auna</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
