--- a/public/index.html
+++ b/public/index.html
@@ -1,76 +1,21 @@
 <!DOCTYPE html>
-<html ⚡ lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/aunalogo.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="0VO-IaX0jVUSurOksYE17E1xK5Go2v-mRWa9LKsG1ak" />
-    <meta name="description" content="Auna: A made in India brand with elegant designs at affordable rates ." />
-    
-    <!-- AMP boilerplate -->
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <style amp-boilerplate>
-      body {
-        -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-        -moz-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-        -ms-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-        animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-      }
-
-      @-webkit-keyframes -amp-start {
-        from { visibility: hidden } to { visibility: visible }
-      }
-
-      @-moz-keyframes -amp-start {
-        from { visibility: hidden } to { visibility: visible }
-      }
-
-      @-ms-keyframes -amp-start {
-        from { visibility: hidden } to { visibility: visible }
-      }
-
-      @keyframes -amp-start {
-        from { visibility: hidden } to { visibility: visible }
-      }
-    </style>
-    <noscript>
-      <style amp-boilerplate>
-        body {
-          -webkit-animation: none;
-          -moz-animation: none;
-          -ms-animation: none;
-          animation: none;
-        }
-      </style>
-    </noscript>
-
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/aunalogo.jpg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Auna</title>
-
-    <!-- AMP required for images -->
-    <script async custom-element="amp-img" src="https://cdn.ampproject.org/v0/amp-img-0.1.js"></script>
-
-    <style amp-custom>
-      body {
-        font-family: sans-serif;
-        padding: 20px;
-        text-align: center;
-        background: #fff;
-      }
-      .logo {
-        margin-bottom: 20px;
-      }
-      .description {
-        font-size: 1.2em;
-        color: #333;
-      }
-    </style>
   </head>
   <body>
-    <div class="logo">
-      <amp-img src="aunalogo.jpg" width="200" height="80" alt="Auna Logo" layout="fixed"></amp-img>
-    </div>
-    <div class="description">
-      <p>Auna: A made in India brand with elegant designs at affordable rates ."</p>
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
