index meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="0VO-IaX0jVUSurOksYE17E1xK5Go2v-mRWa9LKsG1ak" />
+
+    <!-- EDIT KARLE description LAGE TOH -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Elegant and aestehtic bags - Made in India"  
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/aunalogo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Auna</title>
+
+    <!-- ✅ Open Graph (OG) Meta Tags for WhatsApp & Facebook -->
+    <meta property="og:title" content="Auna" />
+    <meta property="og:description" content="Elegant and Aesthetic Bags - made in India" />
+    <meta property="og:image" content="%PUBLIC_URL%/aunalogo.jpg" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:type" content="website" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
