--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- EDIT KARLE description LAGE TOH -->
     <meta
       name="description"
-      content="Elegant and aestehtic bags - Made in India"  
+      content="Elegant and aesthetic bags - Made in India"  
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/aunalogo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
